--- a/scripts/arch/README
+++ b/scripts/arch/README
@@ -40,8 +40,9 @@ SWAP is created within the ROOT partition so that it's contents are encrypted
 
 BIOS: 
 
-/dev/sda1 = SWAP Partition 
-/dev/sda2 = ROOT Partition 
+/dev/sda1 = BOOT partition
+/dev/sda2 = SWAP Partition 
+/dev/sda3 = ROOT Partition 
 
 BIOS ENCRYPTED: 
 
