Alot of changes.

--- a/scripts/arch-installer/README
+++ b/scripts/arch-installer/README
@@ -1,8 +1,19 @@
+CONFIGURATION:
+You should configure the 'arch-config.sh' and 'resources/packages' file before running any scripts. The 
+'arch-config.sh' file contains parameters needed to ensure the installation process runs correctly.
+
+The 'resources/packages' contains a list of packages for the following areas:
+    - Packages within the standard repositories.
+    - Packages within the AUR.
+    - Python-PIP package libraries.
+    - Visual Studio Code Extensions.
+If you do not want to install pip packages for example you can simply remove all the items within the list.
+
 STEPS:
 1. Connect to the internet.
 2. Partition drive in one of the supported layouts.
 3. Edit the 'arch-config.sh' file parameters to match your desired setup.
-4. Edit the '*-packages*.sh' files to add / remove any programs to be installed.
+4. Edit the 'resources/packages' file to add / remove any programs to be installed.
 5. Run 'bash arch-install-01.sh'
 6. Answer any prompts.
 7. After script has finished, reboot machine.
